// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayOf should fail if some values are invalid 1`] = `
Object {
  "errors": Object {
    "invalidIndices": Array [
      Array [
        1,
        Object {
          "expectedFormat": "ISO 8601 date",
          "type": "parse",
          "value": "2015-06lasdkjflöakjsdfölkja",
        },
      ],
      Array [
        3,
        Object {
          "expectedFormat": "ISO 8601 date",
          "type": "parse",
          "value": "2015-06lasdka",
        },
      ],
    ],
    "type": "array",
  },
  "result": "invalid",
}
`;

exports[`ArrayOf should fail on non-array value 1`] = `
Object {
  "errors": Object {
    "actual": "number",
    "expected": "array",
    "type": "type",
  },
  "result": "invalid",
}
`;

exports[`ArrayOf should transform values to a new array 1`] = `
Object {
  "result": "valid",
  "value": Array [
    2007-04-05T16:30:00.000Z,
    2008-04-05T16:30:00.000Z,
    2009-04-05T16:30:00.000Z,
    2010-11-05T16:30:00.000Z,
  ],
}
`;

exports[`ArrayOf should validate an array of strings 1`] = `
Object {
  "result": "valid",
  "value": Array [
    "foo",
    "bar",
    "baz",
  ],
}
`;

exports[`ISODate should not allow invalid dates 1`] = `
Object {
  "errors": Object {
    "expectedFormat": "ISO 8601 date",
    "type": "parse",
    "value": "qwerqwerqwer",
  },
  "result": "invalid",
}
`;

exports[`ISODate should not allow non-string values 1`] = `
Object {
  "errors": Object {
    "actual": "number",
    "expected": "string",
    "type": "type",
  },
  "result": "invalid",
}
`;

exports[`ISODate should parse ISO 8601 dates 1`] = `
Object {
  "result": "valid",
  "value": 2007-04-05T16:30:00.000Z,
}
`;

exports[`Shape should detect invalid simple shape 1`] = `
Object {
  "errors": Object {
    "fields": Object {
      "name": Object {
        "actual": "number",
        "expected": "string",
        "type": "type",
      },
    },
    "type": "shape",
  },
  "result": "invalid",
}
`;

exports[`Shape should optionally not allow extra fields in value 1`] = `
Object {
  "errors": Object {
    "extra": Object {
      "dogs": "array",
    },
    "fields": Object {},
    "type": "shape",
  },
  "result": "invalid",
}
`;

exports[`Shape should optionally not allow extra fields in value 2`] = `
Object {
  "result": "valid",
  "value": Object {
    "name": "Jane Smith",
  },
}
`;

exports[`Shape should optionally not allow extra fields in value 3`] = `
Object {
  "errors": Object {
    "extra": Object {
      "dogs": "array",
    },
    "fields": Object {
      "name": Object {
        "actual": "number",
        "expected": "string",
        "type": "type",
      },
    },
    "type": "shape",
  },
  "result": "invalid",
}
`;

exports[`Shape should validate simple shape 1`] = `
Object {
  "result": "valid",
  "value": Object {
    "dogs": Array [
      "Fluffy",
    ],
    "name": "Jane Smith",
  },
}
`;
